# AgenticAI-V4

./: .env.example  .gitignore  FINAL_STATUS.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  RESUME_EXECUTIF.md  SESSION_SUMMARY.md  STATUS.md  TEST_GUIDE.md  TEST_REPORT.md  docker-compose.yml  install.sh  quick-start.sh  run-tests.sh  run.sh  setup.sh  stop.sh  test_api_features.sh  test_startup.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt
backend/agents/: __init__.py  registry.py
backend/agents/rag/: __init__.py  cached_searcher.py  citation.py  document_loader.py  indexer.py  reranker.py  searcher.py
backend/alembic/: env.py
backend/alembic/versions/: 87ea34a05a4a_initial_migration_users_and_api_keys_.py
backend/api/: dependencies.py  main.py  utils.py
backend/api/routes/: __init__.py  agents.py  auth.py  chat.py  coach.py  docs.py  documents.py  mail.py  monitoring.py  orchestrator.py  pm.py  rag.py  voice.py  webintel.py
backend/config/: __init__.py  settings.py
backend/models/: __init__.py  agent.py  monitoring.py  orchestrator.py  user.py
backend/models/db/: __init__.py  base.py  user.py
backend/orchestrators/: __init__.py  base.py  domain.py  master.py  trace_store.py
backend/services/: __init__.py  auth.py  database.py  document_parser.py  executor.py  messaging.py  monitoring.py  ollama.py  search_cache.py  user.py  vector_store.py
backend/tests/: test_orchestrator.py  test_rag_agents.py
config/agents/: registry.yaml
docs/: API_REFERENCE.md  ARCHITECTURE_COMPLETE.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: AgentsPage.tsx  ChatPage.tsx  CoachPage.tsx  DashboardPage.tsx  DocsPage.tsx  DocumentsPage.tsx  LoginPage.tsx  MailPage.tsx  MonitoringPage.tsx  PMPage.tsx  RegisterPage.tsx  VoicePage.tsx  WebIntelPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
scripts/: download-models.sh  run-backend.sh  seed.py  start-all.sh  start-backend.sh  test-chat-multiple.sh  test-chat.sh  test_all_features.sh  test_auth.py  test_enhanced_rag.py  test_postgres_auth.py  test_protected_routes.sh  test_rag_e2e.py
